<resources>
    <string name="app_name">TMG</string>
    <string name="filter">Фильтр</string>
    <string name="button_auth">Авторизация</string>
    <string name="et_username">Имя пользователя</string>
    <string name="et_password">Пароль</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="general">Главная</string>
    <string name="all_artist">Мои артисты</string>
    <string name="filters">Фильтры</string>
    <string name="by_artist">По артисту</string>
    <string name="select_artist">Выберите артиста</string>
    <string name="category">Категории</string>
    <string name="select_categories">Выберите категории</string>
    <string name="enter_transaction_name">Введите название транзакции</string>
    <string name="by_sender">По отправителю</string>
    <string name="select_sender">Выберите отправителя</string>
    <string name="search_by_trans_name">Поиск по названию транзакции</string>
    <string name="by_recipient">По полчателю</string>
    <string name="select_recipient">Выберите получателя</string>
    <string name="new_transaction">Новая транзакция</string>
    <string name="tags">Теги:</string>
    <string name="select_tags">Выберите теги</string>
    <string name="new_tags">Новые теги:</string>
    <string name="tag_name">Название тега</string>
    <string name="plus_tag">+</string>
    <string name="transaction_name_choose">Название:</string>
    <string name="transaction_name">Название транзакции</string>
    <string name="artist">Артист:</string>
    <string name="sender">Отправитель:</string>
    <string name="recipient">Получатель:</string>
    <string name="currency">Валюта:</string>
    <string name="amount">Сумма</string>
    <string name="close">Закрыть</string>
    <string name="add_transaction">Добавить транзакцию</string>
    <string name="add_artist">Добавить артиста</string>

    <string-array name="catlist">
        <item>Кот</item>
        <item>Кошка</item>
        <item>Котёнок</item>
        <item>Животное</item>
    </string-array>
</resources>
