<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">



    <TextView
        android:id="@+id/tvFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters" />

    <LinearLayout
        android:id="@+id/llFilters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tvFilters">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_artist" />

        <MultiAutoCompleteTextView
            android:id="@+id/acArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_artist" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <MultiAutoCompleteTextView
            android:id="@+id/acCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_categories" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_trans_name" />

        <AutoCompleteTextView
            android:id="@+id/acTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_transaction_name"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_sender" />

        <Spinner
            android:id="@+id/acSender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_sender" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_recipient" />

        <Spinner
            android:id="@+id/acRecipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_recipient" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llFilters"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />
</RelativeLayout>